<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ongletCap">

    <Button
        android:id="@+id/btn_moins_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/round_color2_button"
        android:text="@string/btn_moins_1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_moins_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStanby" />

    <Button
        android:id="@+id/btn_moins_10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/round_color2_button"
        android:text="@string/btn_moins_10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_moins_1" />

    <Button
        android:id="@+id/btnStanby"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/round_color1_button"
        android:text="@string/btn_stanby"
        android:textColor="#FFFCFC"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_moins_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus_1" />

    <Button
        android:id="@+id/btn_plus_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/round_color2_button"
        android:text="@string/btn_plus_1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStanby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus_10" />

    <Button
        android:id="@+id/btn_plus_10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@drawable/round_color2_button"
        android:ellipsize="none"
        android:freezesText="false"
        android:text="@string/btn_plus_10"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap" />

    <TextView
        android:id="@+id/cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/cap"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_plus_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="36sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/cap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toEndOf="@+id/cap"
        app:layout_constraintTop_toTopOf="@+id/cap" />

</androidx.constraintlayout.widget.ConstraintLayout>